website/websites/u64q/code/richards.1.pyston.log

 Tue, 07 Dec 2021 18:35:59 GMT

COMMAND LINE:
 /usr/bin/pyston richards.pyston 10

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "richards.pyston", line 140
    print a,
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a, end=" ")?
